[gd_scene load_steps=32 format=4 uid="uid://b3n3la0geajb6"]

[ext_resource type="Texture2D" uid="uid://cxac0a1g484jy" path="res://Assets/Sprout Lands - Sprites - Basic pack/Tilesets/[64x64] Dungeon Bricks Shadow.png" id="1_v5nmd"]
[ext_resource type="Script" uid="uid://l8uqxqjy8fq6" path="res://Scripts/menu_panel.gd" id="2_ubcqc"]
[ext_resource type="Texture2D" uid="uid://djub65ssuic3p" path="res://Assets/sprites/tileset.png" id="3_4wufx"]
[ext_resource type="Texture2D" uid="uid://bs4qt724a5oe5" path="res://Assets/Sprout Lands - Sprites - Basic pack/Tilesets/Water.png" id="4_jm38t"]
[ext_resource type="Texture2D" uid="uid://bd510yyqt5xmc" path="res://Assets/sprites/scale.png" id="4_pru5s"]
[ext_resource type="Texture2D" uid="uid://bgau2aqvo8ho7" path="res://Assets/Sprout Lands - Sprites - Basic pack/Tilesets/[64x64] Dungeon Bricks Plain.png" id="5_c6j86"]
[ext_resource type="Script" uid="uid://dwjo8vmdnso2u" path="res://Scripts/tutorial.gd" id="7_pggu4"]
[ext_resource type="PackedScene" uid="uid://dkfqntuiwig8s" path="res://Scenes/Dialogue/dialogue_area.tscn" id="7_qa0m7"]
[ext_resource type="Script" uid="uid://d082swllv5wkl" path="res://Scripts/dialogue/dialogue_export_resource.gd" id="8_yxtnq"]
[ext_resource type="Script" uid="uid://bu54caqonn1bx" path="res://Scripts/dialogue/dialogue_text_resource.gd" id="9_ka3r2"]
[ext_resource type="Texture2D" uid="uid://cvs8ytedoffh2" path="res://Assets/sprites/redcube.png" id="10_01mhr"]
[ext_resource type="AudioStream" uid="uid://bv3082wp6ro30" path="res://Assets/Sounds/soundtest.wav" id="11_sk7qh"]
[ext_resource type="Script" uid="uid://qf30somm886x" path="res://Scripts/tutorial_area_2d.gd" id="15_ipbmu"]
[ext_resource type="PackedScene" uid="uid://7va2it4641m0" path="res://Scenes/Characters/player.tscn" id="15_yfuoy"]
[ext_resource type="PackedScene" uid="uid://k87qm5ukwygx" path="res://Scenes/Interactable/InteractArea.tscn" id="16_rm0hi"]
[ext_resource type="PackedScene" uid="uid://bclsslqc0cflw" path="res://Scenes/Characters/npc_rombo.tscn" id="17_ftp5k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jpjhf"]
texture = ExtResource("1_v5nmd")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0

[sub_resource type="TileSet" id="TileSet_4f1n4"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_jpjhf")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_02eho"]
seed = 1
frequency = 0.0024
offset = Vector3(0, 0, 0.73)
fractal_octaves = 10

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_o14dv"]
noise = SubResource("FastNoiseLite_02eho")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r23sa"]
texture = SubResource("NoiseTexture2D_o14dv")
modulate_color = Color(0.08, 0.0784, 0.079626665, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_35xla"]
texture = ExtResource("3_4wufx")
4:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pggu4"]
texture = ExtResource("4_pru5s")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w2rtb"]
texture = ExtResource("4_jm38t")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 1
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 5.5, -8, -8, -8, 8, 8, 8, 8, -8, -8, -8, 8, -8, -8, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y21wc"]
texture = ExtResource("5_c6j86")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -32, -32, 32, -32, 32, 32, -32, 32)
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iojje"]
texture = ExtResource("1_v5nmd")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:6/0 = 0
1:6/0 = 0
2:6/next_alternative_id = 3
2:6/0 = 0
2:6/0/modulate = Color(1, 1, 1, 0)
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:6/1 = 1
2:6/2 = 2
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0

[sub_resource type="TileSet" id="TileSet_5wyu1"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Ground Terrain"
terrain_set_0/terrain_0/color = Color(0.5019608, 0.8745098, 0.2509804, 1)
terrain_set_0/terrain_1/name = "Wall Terrain"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_35xla")
sources/4 = SubResource("TileSetAtlasSource_w2rtb")
sources/7 = SubResource("TileSetAtlasSource_y21wc")
sources/8 = SubResource("TileSetAtlasSource_iojje")
sources/1 = SubResource("TileSetAtlasSource_pggu4")

[sub_resource type="Resource" id="Resource_7cotb"]
script = ExtResource("9_ka3r2")
speaker_img = ExtResource("10_01mhr")
text = "Ciao, sono il signor Triangolo!"
text_speed = 15.0
text_sound = ExtResource("11_sk7qh")
text_volume_db = -15
metadata/_custom_type_script = "uid://bu54caqonn1bx"

[sub_resource type="Resource" id="Resource_55ph6"]
script = ExtResource("9_ka3r2")
speaker_img = ExtResource("10_01mhr")
text = "Qui ha inizio la tua avventura...."
text_speed = 15.0
text_sound = ExtResource("11_sk7qh")
text_volume_db = -15
metadata/_custom_type_script = "uid://bu54caqonn1bx"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cwei"]
size = Vector2(48.571434, 78.75003)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pggu4"]
size = Vector2(197.14294, 180.71436)

[node name="Test" type="Node2D"]

[node name="Tilemaps" type="Node2D" parent="."]

[node name="background" type="TileMapLayer" parent="Tilemaps"]
position = Vector2(30, 5)
tile_set = SubResource("TileSet_4f1n4")
rendering_quadrant_size = 64

[node name="Panel" type="Panel" parent="Tilemaps"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 1921.0
offset_bottom = 1082.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_r23sa")
script = ExtResource("2_ubcqc")

[node name="terrain" type="TileMapLayer" parent="Tilemaps"]
position = Vector2(447, 184)
tile_map_data = PackedByteArray("AAD+/wAACAABAAEAAAD+/wEACAABAAEAAAD+/wIACAABAAEAAAD+/wMACAABAAEAAAD+/wgACAABAAEAAAD+/wkACAABAAEAAAD//wAACAABAAEAAAD//wEACAABAAEAAAD//wIACAABAAEAAAD//wMACAABAAEAAAD//wcACAABAAEAAAD//wgACAABAAEAAAD//wkACAABAAEAAAAAAAAACAABAAEAAAAAAAEACAABAAEAAAAAAAIACAABAAEAAAAAAAMACAABAAEAAAAAAAcACAABAAEAAAAAAAgACAABAAEAAAAAAAkACAABAAEAAAABAAAACAABAAEAAAABAAEACAABAAEAAAABAAIACAABAAEAAAABAAYACAABAAEAAAABAAcACAABAAEAAAABAAgACAABAAEAAAABAAkACAABAAEAAAACAAAACAABAAEAAAACAAEACAABAAEAAAACAAYACAABAAEAAAACAAcACAABAAEAAAACAAgACAABAAEAAAACAAkACAABAAEAAAADAAAACAABAAEAAAADAAEACAABAAEAAAADAAUACAABAAEAAAADAAYACAABAAEAAAADAAcACAABAAEAAAADAAgACAABAAEAAAADAAkACAABAAEAAAAEAAAACAABAAEAAAAEAAEACAABAAEAAAAEAAIACAABAAEAAAAEAAMACAABAAEAAAAEAAQACAABAAEAAAAEAAUACAABAAEAAAAEAAYACAABAAEAAAAEAAcACAABAAEAAAAEAAgACAABAAEAAAAEAAkACAABAAEAAAAFAAAACAABAAEAAAAFAAEACAABAAEAAAAFAAIACAABAAEAAAAFAAMACAABAAEAAAAFAAQACAABAAEAAAAFAAUACAABAAEAAAAFAAYACAABAAEAAAAFAAcACAABAAEAAAAFAAgACAABAAEAAAAFAAkACAABAAEAAAAGAAAACAABAAEAAAAGAAEACAABAAEAAAAGAAIACAABAAEAAAAGAAMACAABAAEAAAAGAAQACAABAAEAAAAGAAUACAABAAEAAAAGAAYACAABAAEAAAAGAAcACAABAAEAAAAGAAgACAABAAEAAAAHAAAACAABAAEAAAAHAAEACAABAAEAAAAHAAIACAABAAEAAAAHAAMACAABAAEAAAAHAAQACAABAAEAAAAHAAUACAABAAEAAAAHAAYACAABAAEAAAAIAAAACAABAAEAAAAIAAEACAABAAEAAAAIAAIACAABAAEAAAAIAAMACAABAAEAAAAIAAQACAABAAEAAAAIAAUACAABAAEAAAAJAAAACAABAAEAAAAJAAEACAABAAEAAAAJAAIACAABAAEAAAAJAAMACAABAAEAAAAJAAQACAABAAEAAAAJAAUACAABAAEAAAAKAAAACAABAAEAAAAKAAEACAABAAEAAAAKAAIACAABAAEAAAAKAAMACAABAAEAAAAKAAQACAABAAEAAAAKAAUACAABAAEAAAALAAAACAABAAEAAAALAAEACAABAAEAAAALAAIACAABAAEAAAALAAMACAABAAEAAAALAAQACAABAAEAAAALAAUACAABAAEAAAALAAYACAABAAEAAAALAAcACAABAAEAAAAMAAAACAABAAEAAAAMAAEACAABAAEAAAAMAAIACAABAAEAAAAMAAMACAABAAEAAAAMAAQACAABAAEAAAAMAAUACAABAAEAAAAMAAYACAABAAEAAAAMAAcACAABAAEAAAAMAAgACAABAAEAAAAMAAkACAABAAEAAAANAAEACAABAAEAAAANAAIACAABAAEAAAANAAMACAABAAEAAAANAAUACAABAAEAAAANAAYACAABAAEAAAANAAcACAABAAEAAAANAAgACAABAAEAAAANAAkACAABAAEAAAAOAAEACAABAAEAAAAOAAIACAABAAEAAAAOAAMACAABAAEAAAAOAAUACAABAAEAAAAOAAYACAABAAEAAAAOAAcACAABAAEAAAAOAAgACAABAAEAAAAOAAkACAABAAEAAAAPAAEACAABAAEAAAAPAAIACAABAAEAAAAPAAMACAABAAEAAAAPAAUACAABAAEAAAAPAAYACAABAAEAAAAPAAcACAABAAEAAAAPAAgACAABAAEAAAAPAAkACAABAAEAAAAQAAIACAABAAEAAAAQAAUACAABAAEAAAAQAAYACAABAAEAAAAQAAcACAABAAEAAAAQAAgACAABAAEAAAAQAAkACAABAAEAAAD//woACAABAAEAAAAAAAoACAABAAEAAAABAAoACAABAAEAAAACAAoACAABAAEAAAADAAoACAABAAEAAAAMAAoACAABAAEAAAANAAoACAABAAEAAAAOAAoACAABAAEAAAAPAAoACAABAAEAAAAQAAoACAABAAEAAAARAAUACAABAAEAAAARAAYACAABAAEAAAARAAcACAABAAEAAAARAAgACAABAAEAAAARAAkACAABAAEAAAARAAoACAABAAEAAAD+/wcACAACAAYAAAD+/wYACAACAAYAAAD+/wUACAACAAYAAAD+/wQACAACAAYAAAD//wQACAACAAYAAAAAAAQACAACAAYAAAABAAQACAACAAYAAAABAAMACAACAAYAAAACAAMACAACAAYAAAACAAIACAACAAYAAAADAAIACAACAAYAAAADAAMACAACAAYAAAADAAQACAACAAYAAAACAAQACAACAAYAAAACAAUACAACAAYAAAABAAUACAACAAYAAAAAAAUACAACAAYAAAAAAAYACAACAAYAAAD//wYACAACAAYAAAD//wUACAACAAYAAAD+/woACAACAAYAAAD9/wgACAACAAYAAAD9/wkACAACAAYAAAD9/wAACAACAAYAAAD9/wEACAACAAYAAAD9/wIACAACAAYAAAD9/wMACAACAAYAAAD+////CAACAAYAAAD/////CAACAAYAAAAAAP//CAACAAYAAAABAP//CAACAAYAAAACAP//CAACAAYAAAADAP//CAACAAYAAAAEAP//CAACAAYAAAAFAP//CAACAAYAAAAGAP//CAACAAYAAAAHAP//CAACAAYAAAAIAP//CAACAAYAAAAJAP//CAACAAYAAAAKAP//CAACAAYAAAALAP//CAACAAYAAAAMAP//CAACAAYAAAANAAAACAACAAYAAAAOAAAACAACAAYAAAAPAAAACAACAAYAAAAQAAAACAACAAYAAAAQAAEACAACAAYAAAARAAEACAACAAYAAAARAAIACAACAAYAAAARAAMACAACAAYAAAAQAAMACAACAAYAAAARAAQACAACAAYAAAAQAAQACAACAAYAAAAPAAQACAACAAYAAAAOAAQACAACAAYAAAANAAQACAACAAYAAAASAAQACAACAAYAAAASAAUACAACAAYAAAASAAYACAACAAYAAAASAAcACAACAAYAAAASAAgACAACAAYAAAASAAkACAACAAYAAAASAAoACAACAAYAAAASAAsACAACAAYAAAARAAsACAACAAYAAAAQAAsACAACAAYAAAAPAAsACAACAAYAAAAOAAsACAACAAYAAAANAAsACAACAAYAAAAMAAsACAACAAYAAAALAAsACAACAAYAAAALAAoACAACAAYAAAALAAkACAACAAYAAAALAAgACAACAAYAAAAKAAgACAACAAYAAAAKAAcACAACAAYAAAAKAAYACAACAAYAAAAJAAYACAACAAYAAAAIAAYACAACAAYAAAAIAAcACAACAAYAAAAHAAcACAACAAYAAAAHAAgACAACAAYAAAAHAAkACAACAAYAAAAGAAkACAACAAYAAAAGAAoACAACAAYAAAAFAAoACAACAAYAAAAEAAoACAACAAYAAAAEAAsACAACAAYAAAADAAsACAACAAYAAAACAAsACAACAAYAAAABAAsACAACAAYAAAAAAAsACAACAAYAAAD//wsACAACAAYAAAD+/wsACAACAAYAAAD9/woACAACAAYAAAD9/wcACAACAAYAAAA=")
tile_set = SubResource("TileSet_5wyu1")

[node name="terrain2" type="TileMapLayer" parent="Tilemaps"]
visible = false
position = Vector2(447, 184)
tile_map_data = PackedByteArray("AAD//wEAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_5wyu1")
script = ExtResource("7_pggu4")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
color = Color(0.83889705, 0.83889705, 0.838897, 1)
energy = 1.2
blend_mode = 1

[node name="Area2D2" parent="." instance=ExtResource("16_rm0hi")]
position = Vector2(1408, 696)

[node name="StairArea" parent="." instance=ExtResource("16_rm0hi")]
position = Vector2(416, 282)
interactionType = 1

[node name="NpcRombo" parent="." instance=ExtResource("17_ftp5k")]
position = Vector2(1408, 696)
scale = Vector2(1.4, 1.4)

[node name="DialogueArea2D" parent="NpcRombo" instance=ExtResource("7_qa0m7")]
dialogue = Array[ExtResource("8_yxtnq")]([SubResource("Resource_7cotb"), SubResource("Resource_55ph6")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="NpcRombo/DialogueArea2D"]
visible = false
position = Vector2(-1.4285581, -7.8571167)
scale = Vector2(0.9999994, 0.9999994)
shape = SubResource("RectangleShape2D_5cwei")

[node name="Area2D" type="Area2D" parent="NpcRombo"]
script = ExtResource("15_ipbmu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NpcRombo/Area2D"]
position = Vector2(0, 0.35714722)
scale = Vector2(0.9999996, 0.9999996)
shape = SubResource("RectangleShape2D_pggu4")

[node name="Player" parent="." instance=ExtResource("15_yfuoy")]
position = Vector2(540, 659)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(961, 542)
zoom = Vector2(1.3, 1.3)

[connection signal="body_entered" from="NpcRombo/Area2D" to="NpcRombo/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="NpcRombo/Area2D" to="NpcRombo/Area2D" method="_on_body_exited"]
